--- a/index.html
+++ b/index.html
@@ -75,21 +75,23 @@
     <div class='main-container'>
       <div class='imprint content subcontent wrapper clearfix'>
         <article class='clearfix'>
+          <header>
+            <h4>Imprint</h4>
+          </header>
           <section class='clearfix'>
             <div class='imprint-left'>
               <h3>Address:</h3>
               <p>
-                <strong>Deutsche Telekom AG</strong>
+                Deutsche Telekom AG
                 <br>
                 Friedrich Ebert Allee 140
                 <br>
                 53113 Bonn
                 <br>
-                <br>
                 Local Court Entry Bonn HRB 6794,
                 <br>
                 <br>
-                <strong>Company Headquarters:</strong>
+                Company Headquarters:
                 <br>
                 Bonn, Germany
               </p>
@@ -98,7 +100,6 @@
               <h3>Responsible:</h3>
               <p>
                 Ursula Knipp
-                <br>
                 <br>
                 Deutsche Telekom AG
                 <br>
@@ -112,19 +113,17 @@
             <div class='imprint-left'>
               <h3>Authorized to represent:</h3>
               <p>
-                Ren&eacute; Obermann
+                Thimotheus H&ouml;ttges
                 <br>
                 Reinhard Clemens
                 <br>
                 Niek Jan van Damme
                 <br>
-                Timotheus H&ouml;ttges
+                Thomas Dannenfeldt
                 <br>
                 Dr. Thomas Kremer
                 <br>
                 Claudia Nemat
-                <br>
-                Prof. Dr. Marion Schick
               </p>
             </div>
             <div class='imprint-right'>
@@ -144,6 +143,9 @@
       </div>
       <div class='legaldisclaimer content subcontent wrapper clearfix'>
         <article class='clearfix'>
+          <header>
+            <h4>Disclaimer</h4>
+          </header>
           <section class='clearfix'>
             <p>
               Deutsche Telekom AG in no way guarantees that the
@@ -187,7 +189,7 @@
       <div class='privacypolicy content subcontent wrapper clearfix'>
         <article class='clearfix'>
           <header>
-            <h1>Privacy Policy</h1>
+            <h4>Privacy Policy</h4>
           </header>
           <section>
             <p>
@@ -293,19 +295,25 @@
           <header>
             <h1>
               Deutsche Telekom For
-              <span>Mobile virtual network operators</span>
+              <br>
+              Mobile virtual network operators
             </h1>
+            <!--[if IE 8]>
+            <img src='img/title-mobile-virtual-network-operators-alt.jpg' width='100%'>
+            <![endif]-->
             <img class='desktop-block' src='img/title-mobile-virtual-network-operators.jpg' width='100%'>
             <img class='mobile-block' src='img/title-mobile-virtual-network-operators-mobile.jpg' width='100%'>
           </header>
           <section class='intro_copy'>
             <p>
-              Deutsche Telekom is one of the world's leading integrated telecommunications companies. We operate mobile networks in 15 European countries as well as the US and offer the only cross-Atlantic mobile telecommunications footprint in the world.
+              Deutsche Telekom is one of the world's leading integrated telecommunications companies. We operate mobile networks in 14 European countries as well as the US and offer the only cross-Atlantic mobile telecommunications footprint in the world.
             </p>
           </section>
           <section>
             <p>
-              Our goal is to innovate our industry and provide our customers with the best possible service. Essential to achieving this objective are strong partnerships, of which one of the most important is the enablement of Mobile Virtual Network Operators (MVNOs). We are a pioneer in the Virtual Operator field and host a number of the world's most successful MVNOs on our networks. With our extensive knowledge, we give our partners the support they need to successfully enter the telecommunications space.
+              Our goal is to innovate our industry and provide our customers with the best possible service. Essential to achieving this objective are strong partnerships, of which one of the most important is the enablement of Mobile Virtual Network Operators (MVNOs).
+              <br>
+              We are a pioneer in the Virtual Operator field and host a number of the world's most successful MVNOs on our networks. With our extensive knowledge, we give our partners the support they need to successfully enter the telecommunications space.
             </p>
           </section>
         </article>
@@ -314,6 +322,9 @@
             <h1>
               Selected Segments
             </h1>
+            <!--[if IE 8]>
+            <img src='img/title-selected-segments-alt.jpg' width='100%'>
+            <![endif]-->
             <img class='desktop-block' src='img/title-selected-segments.jpg' width='100%'>
             <img class='mobile-block' src='img/title-selected-segments-mobile.jpg' width='100%'>
           </header>
@@ -413,9 +424,11 @@
         <article class='clearfix business-models'>
           <header>
             <h1>
-              Deutsche Telekom For
-              <span>Mobile virtual network operators</span>
+              Business Models
             </h1>
+            <!--[if IE 8]>
+            <img src='img/title-mobile-virtual-network-operators-business-models-alt.jpg' width='100%'>
+            <![endif]-->
             <img class='desktop-block' src='img/title-mobile-virtual-network-operators-business-models.jpg' width='100%'>
             <img class='mobile-block' src='img/title-mobile-virtual-network-operators-business-models-mobile.jpg' width='100%'>
           </header>
@@ -545,7 +558,7 @@
           </p>
           <p>
             We offer the only transatlantic mobile communications footprint,
-            covering 15 European countries and the US.
+            covering 14 European countries and the US.
           </p>
           <p>
             If you are interested in becoming an MVNO hosted by one of our
@@ -562,7 +575,6 @@
             <option value=''>Choose a destination ...</option>
             <option value='http://www.amc.al/'>Albania: AMC</option>
             <option value='http://www.t-mobile.at/'>Austria: T-Mobile Austria</option>
-            <option value='http://www.globul.bg/eng/'>Bulgaria: Globul</option>
             <option value='http://www.t.ht.hr/eng'>Croatia: T-Hrvatski Telekom</option>
             <option value='http://www.t-mobile.cz/'>Czech Republic: T-Mobile Czech Republic</option>
             <option value='http://www.telekom.de/'>Germany: Telekom Deutschland</option>
@@ -572,8 +584,8 @@
             <option value='http://www.telekom.me/'>Montenegro: Crnogorski Telekom</option>
             <option value='http://www.t-mobile.nl/'>Netherlands: T-Mobile Netherlands</option>
             <option value='http://www.t-mobile.pl/en/'>Poland: T-Mobile Poland</option>
-            <option value='http://www.slovaktelekom.sk/'>Slovakia: Slovak Telekom</option>
-            <option value='http://www.cosmote.ro/en/'>Romania: Cosmote Romania</option>
+            <option value='http://www.telekom.sk/'>Slovakia: Slovak Telekom</option>
+            <option value='http://www.cosmote.ro/'>Romania: Cosmote Romania</option>
             <option value='http://everythingeverywhere.com/'>United Kingdom: Everything Everywhere</option>
             <option value='http://www.t-mobile.com/'>USA: T-Mobile USA</option>
           </select>
@@ -587,7 +599,7 @@
             <span>
               Other Links:
             </span>
-            <a href='http://telekom.de'>Deutsche Telekom</a>
+            <a href='http://telecom.com'>Deutsche Telekom</a>
             |
             <a href='http://www.telekom-icss.com/'>ICSS</a>
             |
